2010-05-06  Dao Tran Minh  <dao@kr.tuwien.ac.at>

	* src/dmcsd.cpp: Get neighbor_list from bridge rules parsing.

	* src/PrimitiveDMCS.cpp: Use neighbors from context.
	* src/OptDMCS.cpp: Likewise.

	* src/ContextGenerator.cpp: Adapt to neighbor_list.
	* src/genTest.cpp: Likewise.

	* include/Context.h: Let neighbor_list be a member of context.

	* include/ClaspResultGrammar.tcc: #if --> #ifdef

	* include/BridgeRulesBuilder.tcc: Update neighbor_list based on
	bridge atoms.

2010-05-05  Minh Tran Dao  <dao@dvorak.kr.tuwien.ac.at>

	* include/QueryPlan.h: Replace Neighbors by NeighborList.
	* include/Signature.h: Replace Signatures by SignatureVec.
	* src/genTest.cpp: Likewise.
	* src/dmcsd.cpp): Likewise.
	* src/QueryPlan.cpp: Likewise.
	* src/PrimitiveDMCS.cpp: Likewise.
	* src/OptDMCS.cpp: Likewise.
	* src/ContextGenerator.cpp: Likewise.
	* include/PrimitiveDMCS.h: Likewise.
	* include/Neighbor.h: Likewise.
	* include/Context.h: Likewise.

	* include/BridgeRulesBuilder.tcc: Build neighbor_list from
	bridge rules.
	* include/BridgeRulesBuilder.h: Likewise.
2010-05-05  Minh Dao Tran  <dao@kr.tuwien.ac.at>


	* src/OptDMCS.cpp: Adapt generation of V.
	* src/PrimitiveDMCS.cpp: Likewise.

	* src/BaseDMCS.cpp: Add case distinction whether to initiate sis
	in the constructor

	* include/Makefile.am: Add ProxySignatureByLocal.h

	* include/ProxySignatureByLocal.h: Detail the methods.


	* src/dmcsd.cpp: Create global_sigs and pass it to PrimitiveDMCS.

	* src/OptDMCS.cpp (getBeliefStates): Move construction of
	signatures from SatSolver here. Will be replaced by
	ProxySignatureByLocal.
	* src/PrimitiveDMCS.cpp (getBeliefStates): Likewise.

	* include/Signature.h: Add Signatures and SignaturesPtr.

	* include/Server.tcc: update debug information.

	* include/Process.h: templatized with ModelBuilder.

	* include/PrimitiveDMCS.h: Add sis for statistic information, add
	createGuessingSignature(). Add global_sigs.

	* include/OptDMCS.h: Add createGuessingSignature().
